# TheFontinator

./: .gitignore  README.md  pyproject.toml
backend/: README.md  config.py  main.py  pyproject.toml  testing.py
backend/data/: FontData.npy  GridCoords.npy  GridCoords_integers.npy  IntGridCoords.npy  semantic_axes.parquet
datawork/: Analysis.ipynb  FineTunedModel.ipynb  PhotoExtractor.py  README.md  ZeroShotTraining.ipynb  easy_setup.ipynb  pyproject.toml  testing.py
datawork/tags/: clip_predictions.csv  expressive_tags.csv
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Center.jsx  Favorites.jsx  FontBox.jsx  GridSelector.jsx  Results.jsx  Settings.jsx  Slider.jsx  SliderPanel.jsx
