[project]
name = "datawork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "umap-learn>=0.5.11",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
